--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "lint": "eslint src --ext .ts",
+    "lint": "eslint src",
     "test": "vitest",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "doctor": "ts-node src/scripts/doctor.ts",
-    "cert": "ts-node src/scripts/cert.ts"
+    "cert": "ts-node src/scripts/cert.ts",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -29,14 +30,17 @@
     "zod-to-json-schema": "^3.25.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^25.0.9",
     "eslint": "^9.39.2",
+    "globals": "^17.0.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.8.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.0",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.17",
+    "husky": "^8.0.0"
   }
 }
