--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,8 @@ jobs:
 
     - name: Test
       run: npm test
+      env:
+        NODE_ENV: test
+        DISCORD_TOKEN: test-token-for-ci
+        DISCORD_APP_ID: test-app-id-for-ci
+        DATABASE_URL: file:./test.db
