--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "@types/node": "^25.0.9",
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
+    "husky": "^8.0.0",
     "nodemon": "^3.1.11",
     "prettier": "^3.8.0",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.0",
-    "vitest": "^4.0.17",
-    "husky": "^8.0.0"
+    "vitest": "^4.0.17"
   }
 }
