docs: standardize all pipeline doc stats to gemini

--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,13 @@ POLLINATIONS_BASE_URL=https://gen.pollinations.ai/v1
 POLLINATIONS_MODEL=gemini
 POLLINATIONS_API_KEY=YOUR_POLLINATIONS_KEY_HERE
 
-# Profile Memory LLM Override (uses Gemini Large)
+# Profile Memory LLM Override (uses Gemini)
 PROFILE_PROVIDER=pollinations
-PROFILE_POLLINATIONS_MODEL=gemini-large
+PROFILE_POLLINATIONS_MODEL=gemini
 
-# Channel Summary Override (uses Gemini Large)
+# Channel Summary Override (uses Gemini)
 SUMMARY_PROVIDER=pollinations
-SUMMARY_MODEL=gemini-large
+SUMMARY_MODEL=gemini
 
 # Formatter (uses Qwen Coder for reliable JSON)
 FORMATTER_MODEL=qwen-coder
