Clarify chat-only model selection

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ DEV_GUILD_ID=
 LLM_PROVIDER=pollinations
 POLLINATIONS_BASE_URL=https://gen.pollinations.ai/v1
 POLLINATIONS_MODEL=gemini
-# Optional: get a key at pollinations.ai to enable higher limits/premium models
+# Required for onboarding: get a key at pollinations.ai to enable higher limits/premium models
 POLLINATIONS_API_KEY=
 
 # Profile Memory LLM Override
