--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node dist/index.js",
     "lint": "eslint src",
     "test": "vitest run",
-    "setup": "node scripts/setup.js",
+    "setup": "ts-node src/scripts/onboard.ts",
+    "onboard": "ts-node src/scripts/onboard.ts",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "doctor": "ts-node src/scripts/doctor.ts",
