--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "sage",
   "version": "1.0.0",
-  "description": "",
+  "description": "An intelligent Discord bot with persistent memory, powered by Pollinations.ai. Remembers conversations, understands community relationships, and delivers personalized AI responses.",
   "main": "index.js",
+  "keywords": [
+    "discord",
+    "bot",
+    "ai",
+    "pollinations",
+    "memory",
+    "chatbot",
+    "llm",
+    "community"
+  ],
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
