--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@discordjs/voice": "^0.19.0",
     "@prisma/client": "^5.22.0",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "ffmpeg-static": "^5.3.0",
+    "libsodium-wrappers": "^0.8.1",
+    "opusscript": "^0.0.8",
     "pino": "^10.2.0",
     "pino-pretty": "^13.1.3",
+    "prism-media": "^1.3.5",
     "zod": "^3.25.76",
     "zod-to-json-schema": "^3.25.1"
   },
