--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@discordjs/voice": "^0.19.0",
     "@prisma/client": "^5.22.0",
+    "@snazzah/davey": "^0.1.9",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
