--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc -p config/ci/tsconfig.json",
     "start": "node dist/index.js",
-    "lint": "eslint src",
+    "lint": "eslint src --config config/ci/eslint.config.mjs",
     "test": "vitest run -c config/ci/vitest.config.mjs",
     "release:check": "npm run lint && npm run build && npm run test && npm pack",
     "setup": "ts-node src/scripts/onboard.ts",
