--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Lint Markdown files
         uses: DavidAnson/markdownlint-cli2-action@v18
         with:
+          config: config/ci/.markdownlint-cli2.jsonc
           globs: |
             **/*.md
             !node_modules/**
