--- a/config/ci/.markdownlint-cli2.jsonc
+++ b/config/ci/.markdownlint-cli2.jsonc
@@ -1,6 +1,6 @@
 {
     "config": {
-        "extends": "config/ci/.markdownlint.json"
+        "extends": ".markdownlint.json"
     },
     "globs": [
         "**/*.md",
