--- a/config/ci/.markdownlint-cli2.jsonc
+++ b/config/ci/.markdownlint-cli2.jsonc
@@ -1,6 +1,17 @@
 {
     "config": {
-        "extends": ".markdownlint.json"
+        "MD013": false,
+        "MD033": false,
+        "MD041": false,
+        "MD024": {
+            "siblings_only": true
+        },
+        "MD007": {
+            "indent": 2
+        },
+        "MD036": false,
+        "MD060": false,
+        "MD034": false
     },
     "globs": [
         "**/*.md",
