chore: fix markdown lint errors and consolidate config

--- a/config/ci/markdownlintmaster.markdownlint-cli2.jsonc
+++ b/config/ci/markdownlintmaster.markdownlint-cli2.jsonc
@@ -11,7 +11,8 @@
         },
         "MD036": false,
         "MD060": false,
-        "MD034": false
+        "MD034": false,
+        "MD051": false
     },
     "globs": [
         "**/*.md",
