chore: sync env example and increase summary limit

--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,14 @@ DEV_GUILD_ID=
 LLM_PROVIDER=pollinations
 POLLINATIONS_BASE_URL=https://gen.pollinations.ai/v1
 POLLINATIONS_MODEL=gemini
+POLLINATIONS_IMAGE_BASE_URL=https://gen.pollinations.ai
 # Optional: set a global key for higher limits or leave blank and use /sage key set per server
 POLLINATIONS_API_KEY=
 
 # Profile Memory LLM Override
 PROFILE_PROVIDER=
 PROFILE_POLLINATIONS_MODEL=deepseek
+PROFILE_UPDATE_INTERVAL=5
 
 # Channel Summary Model
 SUMMARY_MODEL=openai-large
@@ -56,7 +58,7 @@ SUMMARY_ROLLING_WINDOW_MIN=60
 SUMMARY_ROLLING_MIN_MESSAGES=20
 SUMMARY_ROLLING_MIN_INTERVAL_SEC=300
 SUMMARY_PROFILE_MIN_INTERVAL_SEC=21600
-SUMMARY_MAX_CHARS=1800
+SUMMARY_MAX_CHARS=4000
 SUMMARY_SCHED_TICK_SEC=60
 
 # -----------------------------------------------------------------------------
