--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ POLLINATIONS_BASE_URL=https://gen.pollinations.ai/v1
 POLLINATIONS_MODEL=gemini
 POLLINATIONS_IMAGE_BASE_URL=https://gen.pollinations.ai
 # Optional: set a global key for higher limits or leave blank and use /sage key set per server
+# [NOTE] If left blank, servers MUST provide their own key (BYOP) via /sage key set.
+# Get a key at https://pollinations.ai/ or their Discord.
 POLLINATIONS_API_KEY=
 
 # Profile Memory LLM Override
